pull in the first translations

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_de.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_de.properties
@@ -1,106 +1,72 @@
-changeServerStatus=Wollen Sie Server {1} wirklich {0}?
-deleteServerConfig=Server Konfiguration Entfernen
-deleteServerConfigConfirm=Wollen Sie Server Konfiguration {0} wirklich entfernen?
-deploymentsFor=Deployments f&uuml;r Gruppe {0}
-common_validation_portOffsetUndefined={0} oder Port Offset nicht definiert
-deleteServerGroupConfirm=Wollen Sie Server Gruppe {0} entfernen?
-deleteServerGroup=Server Gruppe entfernen
-deleteJVM=JVM Optionen entfernen
-deleteJVMConfirm=Wirklich die JVM Optionen entfernen?
-removeProperty=Property entfernen
-removePropertyConfirm=Wirklich Property {0} entfernen?
-
+changeServerStatus=Wollen Sie  server {1} {0}  ?
+deleteServerConfig=Server Konfig entfernen
+deleteServerConfigConfirm="M\u02c6chten Sie Server Konfig {0} entfernen ?
+deploymentsFor=Deployments f\u00b8r {0}
+common_validation_portOffsetUndefined={0} oder portOffset undefiniert
+deleteServerGroupConfirm=M\u02c6chten Sie Servergruppe {0} entfernen?
+deleteServerGroup=Servergruppe entfernen
+deleteJVM=JVM-Einstellungen entfernen 
+deleteJVMConfirm=Die JVM-Einstellungen wirklich entfernen?
+common_validation_heapSize=G\u00b8ltige Heap-Gr\u02c6\ufb02e in mb eingeben 
+removeProperty=Property entfernen 
+removePropertyConfirm=Property {0} wirklich entfernen?
+mustBeDeployableArchive={0} muss ein deploybarer Archivdateiname sein 
 alreadyExists={0} existiert bereits.
-mustBeDeployableArchive={0} ist kein g&uuml;ltiger File Name.
-common_validation_notEmptyNoSpace=Ben\u009atigt, keine Leerzeichen
-commmon_description_newServerGroup=Erstellt eine Server Gruppe basierend auf einer Existierenden.
-savedSettings=Einstellungen gespeichert
-restartRequired=Restart notwendig
-restartRequiredConfirm=&Auml;nderungen and den Einstellungen erfordern einen Neustart. Bitte laden Sie die Anwendung erneut.
-
-# Please translate these
+common_validation_requiredField=Erforderliches Feld.
+common_validation_notEmptyNoSpace=Nicht leer, kein Whitespace
+commmon_description_newServerGroup=Erstellen Sie basierend auf der bestehenden eine neue Servergruppe. Die neue Gruppe erbt die Properties der gew\u2030hlten Gruppe
+savedSettings=Erfolg\: Einstellungen gespeichert
+restartRequired=Neustart erforderlich
+restartRequiredConfirm=Die \u0192nderung der Einstellungen erfordert einen Neustart. Bitte laden Sie diese Applikation neu.
 removeFromConfirm={0} aus {1} entfernen?
-failedToRemoveFrom={0} konnte nicht aus {1} entfernt werden.
+failedToRemoveFrom=Entfernung von {0} aus {1} fehlgeschlagen.
 removedFrom={0} aus {1} entfernt.
 enableConfirm={0} aktivieren?
 disableConfirm={0} deaktivieren?
-failedToEnable=Aktivieren fehlgeschlagen: {0}.
-failedToDisable=Deaktivieren fehlgeschlagen: {0}.
-successEnabled=Aktivieren erfolgreich: {0}.
-successDisabled=Deaktivieren erfolgreich: {0}.
-addConfirm={0} zu {1} hinzuf&uuml;gen?
-failedToAdd=Fehlgeschlagen: {0} zu {1} hinzuf&uuml;gen.
-successAdd={0} zu {1} hinzuf&uuml;gt.
-alreadyAssignedTo={0} ist bereits {1} zugewiesen.
-temporarilyUnavailable=Momentan nicht verf&uuml;gbar.
-
-
+failedToEnable=Aktivierung von {0} fehlgeschlagen.
+failedToDisable=Deaktivierung von {0} fehlgeschlagen.
+successEnabled=Erfolg\: {0} aktiviert.
+successDisabled=Erfolg\: {0} deaktiviert.
+addConfirm={0} zu {1} hinzuf\u00b8gen?
+failedToAdd=Hinzuf\u00b8gung von {0} zu {1} fehlgeschlagen.
+successAdd={0} zu {1} hinzugef\u00b8gt.
+alreadyAssignedTo={0} ist {1} bereits zugeordnet.
+temporarilyUnavailable=Vor\u00b8bergehend nicht verf\u00b8gbar, bitte versuchen Sie es erneut.
 deleteTitle={0} entfernen
 deleteConfirm={0} wirklich entfernen?
-
-createTitle=Hinzuf&uuml;gen {0}
-added={0} hinzugef&uuml;gt
-addingFailed= Fehlgeschlagen: {0} hinzuf&uuml;gen.
-deleted=Entfernt {0}
-deletionFailed=Fehlgeschlagen:  Entfernen {0}
-saved=Gespeichert {0}
-saveFailed=Fehlgeschlagen: Speichern {0}
-modify=&Auml;nderung {0}
-modifyConfirm={0} wirklich &auml;ndern?
-modified=Ge&auml;ndert {0}
-modificationFailed=Fehlgeschlagen: &Auml;nderung {0}
-
-selectServerGroups=Auswahl Server Gruppen
-selectServerGroupsFor=Auswahl der Server Grupen f&uuml;r {0}
-alreadyAssignedToAllGroups={0} ist bereits allen Gruppen zugewiesen.
-noServerGroupsSelected=Keine Gruppe ausgw&auml;hlt!
-
+createTitle={0} erstellen
+added={0} hinzugef\u00b8gt
+addingFailed=Hinzuf\u00b8gung von {0} fehlgeschlagen
+deleted={0} entfernt.
+deletionFailed=Entfernung von {0} fehlgeschlagen
+saved={0} gespeichert
+saveFailed=Speicherung von {0} fehlgeschlagen
+modify={0} bearbeiten
+modifyConfirm={0} wirklich bearbeiten?
+modified={0} bearbeitet 
+modificationFailed=Bearbeitung von {0} fehlgeschlagen
+serversRunningOnHost=Serververf\u00b8gbarkeit am Host\: {0}
+selectServerGroups=Servergruppen w\u2030hlen 
+selectServerGroupsFor=Servergruppen f\u00b8r {0}w\u2030hlen 
+alreadyAssignedToAllGroups={0} ist bereits allen Servergruppen zugeordnet.
+noServerGroupsSelected=Keine Servergruppen gew\u2030hlt. 
 unknown_error=Unbekannter Fehler
-available=Verf&uuml;gbare {0}
-
-successful=Erfolgreich: {0}
-failed=Fehlgeschlagen: {0}
-
-
-#
-# Config Admin
-#
-subsys_configadmin_remove=Configuration Admin Data entfernen
-subsys_configadmin_removeConfirm=Configuration Admin Data f&uuml;r PID: {0} entfernen?
-
-#
-# Subsys Naming
-#
-subsys_naming_failedToLoadJNDIView=Konnte die JNDI Informationen nicht laden.
-
-#
-# Subsys OSGI
-#
-subsys_osgi_frameworkPropertiesHelp=OSGi Framework Properties. &Auml;nderungen an diesen Einstellungen erfordern einen Neustart.
-subsys_osgi_capabilitiesHelp=Capabilities sind JBoss Modules oder OSGi Bundles die geladen werden, wenn das OSGi Subsystem startet. Das Start Level regelt, ob und wann sie gestartet werden.
-subsys_osgi_removeCapability=Capability Entfernen
-subsys_osgi_removeCapabilityConfirm=Wirklich Capabilities: {0} entfernen?
-subsys_osgi_cant_start_fragment=Fragment ({0}) konnte nicht gestartet werden.
-subsys_osgi_cant_stop_fragment=Fragment ({0}) konnte nicht gestopped werden.
-subsys_osgi_activate=The OSGi Subsystem is nicht aktiviert. ''OK'' um es jetzt zu aktivieren.
-subsys_osgi_activating=Aktivierung...
-
-
-#
-# server configuration
-#
-server_config_stillRunning=Server Instanz noch aktiv: {0}
-
-#
-# JCA
-#
-
-subsys_jca_err_ds_notEnabled=Datasource nicht aktiv: {0}
-
-#
-# JPA
-#
-
-subsys_jpa_err_mericDisabled=Metric nicht aktiviert: {0}
-
-server_reload_confirm=Wollen Sie die Konfiguration des Server {0} wirklich neu laden?
+available=Verf\u00b8gbar {0}
+successful=Erfolg\: {0}
+failed=Fehlgeschlagen\: {0}
+subsys_configadmin_remove=Konfiguration Admin Data entfernen
+subsys_configadmin_removeConfirm=Konfiguration Admin Daten f\u00b8r PID\: {0} entfernen?
+subsys_naming_failedToLoadJNDIView=Laden der JNDI-Informationen fehlgeschlagen.
+subsys_osgi_frameworkPropertiesHelp=OSGi Framework Properties. \u0192nderungen an diesen Properties erfordern einen  Framework Neustart, um wirksam zu werden.
+subsys_osgi_capabilitiesHelp="Capabilities" sind JBoss Module oder OSGi-B\u00b8ndel, die geladen und optional beim Startup des OSGi-Untersystems gestartet werden. Ihre Startebene zeigt an, ob sie gestartet werden. 
+subsys_osgi_removeCapability="Capability" entfernen
+subsys_osgi_removeCapabilityConfirm=Aus "Capabilities" entfernen\: {0}?
+subsys_osgi_cant_start_fragment=Kann kein Fragment ({0}) starten.
+subsys_osgi_cant_stop_fragment=Kann kein Fragment ({0}) stoppen.
+subsys_osgi_activate=Das OSGi-Untersystem ist nicht aktiv. Klicken Sie auf ''OK'', um es jetzt zu aktivieren. 
+subsys_osgi_activating=Aktiviere...
+subsys_messaging=Messaging-Provider\: {0}
+subsys_jca_err_ds_notEnabled=Datenquelle nicht aktiviert\: {0}
+server_config_stillRunning=Die Serverinstanz l\u2030uft noch\: {0}
+subsys_jpa_err_mericDisabled=Metrik an {0} nicht aktiviert
+server_reload_confirm=M\u02c6chten Sie die Serverkonfiguration f\u00b8r Server {0} neu laden?
