Handle singleton pattern for infinispan caches.

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
@@ -244,6 +244,9 @@ subsys_infinispan_distributed=Distributed
 subsys_infinispan_aliases=Aliases
 subsys_infinispan_transaction=Transaction
 subsys_infinispan_store=Store
+subsys_infinispan_file_store=File Store
+subsys_infinispan_jdbc_store=JDBC Store
+subsys_infinispan_remote_store=Remote Store
 
 
 #
