General cleanup.  Make DistributedCache extend ReplicatedCache.

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
@@ -239,14 +239,15 @@ subsys_infinispan_localCache=Local Cache
 subsys_infinispan_invalidationCache=Invalidation Cache
 subsys_infinispan_replicatedCache=Replicated Cache
 subsys_infinispan_distributedCache=Distributed Cache
-subsys_infinispan_stateTransfer=State Transfer
+subsys_infinispan_stateTransfer=State Xfer
 subsys_infinispan_distributed=Distributed
 subsys_infinispan_aliases=Aliases
-subsys_infinispan_transaction=Transaction
+subsys_infinispan_transaction=Trans
 subsys_infinispan_store=Store
 subsys_infinispan_file_store=File Store
 subsys_infinispan_jdbc_store=JDBC Store
-subsys_infinispan_remote_store=Remote Store
+subsys_infinispan_remote_store=Rmt Store
+subsys_infinispan_attrs=Attrs
 
 
 #
