updated translated files

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_de.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_de.properties
@@ -1,23 +1,23 @@
 changeServerStatus=Wollen Sie  server {1} {0}  ?
 deleteServerConfig=Server Konfig entfernen
-deleteServerConfigConfirm="M\u02c6chten Sie Server Konfig {0} entfernen ?
-deploymentsFor=Deployments f\u00b8r {0}
+deleteServerConfigConfirm="M\u00f6chten Sie Server Konfig {0} entfernen ?
+deploymentsFor=Deployments f\u00fcr {0}
 common_validation_portOffsetUndefined={0} oder portOffset undefiniert
-deleteServerGroupConfirm=M\u02c6chten Sie Servergruppe {0} entfernen?
+deleteServerGroupConfirm=M\u00f6chten Sie Servergruppe {0} entfernen?
 deleteServerGroup=Servergruppe entfernen
 deleteJVM=JVM-Einstellungen entfernen 
 deleteJVMConfirm=Die JVM-Einstellungen wirklich entfernen?
-common_validation_heapSize=G\u00b8ltige Heap-Gr\u02c6\ufb02e in mb eingeben 
+common_validation_heapSize=G\u00fcltige Heap-Gr\u00f6\u00dfe in mb eingeben 
 removeProperty=Property entfernen 
 removePropertyConfirm=Property {0} wirklich entfernen?
 mustBeDeployableArchive={0} muss ein deploybarer Archivdateiname sein 
 alreadyExists={0} existiert bereits.
 common_validation_requiredField=Erforderliches Feld.
 common_validation_notEmptyNoSpace=Nicht leer, kein Whitespace
-commmon_description_newServerGroup=Erstellen Sie basierend auf der bestehenden eine neue Servergruppe. Die neue Gruppe erbt die Properties der gew\u2030hlten Gruppe
+commmon_description_newServerGroup=Erstellen Sie basierend auf der bestehenden eine neue Servergruppe. Die neue Gruppe erbt die Properties der gew\u00e4hlten Gruppe
 savedSettings=Erfolg\: Einstellungen gespeichert
 restartRequired=Neustart erforderlich
-restartRequiredConfirm=Die \u0192nderung der Einstellungen erfordert einen Neustart. Bitte laden Sie diese Applikation neu.
+restartRequiredConfirm=Die \u00c4nderung der Einstellungen erfordert einen Neustart. Bitte laden Sie diese Applikation neu.
 removeFromConfirm={0} aus {1} entfernen?
 failedToRemoveFrom=Entfernung von {0} aus {1} fehlgeschlagen.
 removedFrom={0} aus {1} entfernt.
@@ -27,16 +27,16 @@ failedToEnable=Aktivierung von {0} fehlgeschlagen.
 failedToDisable=Deaktivierung von {0} fehlgeschlagen.
 successEnabled=Erfolg\: {0} aktiviert.
 successDisabled=Erfolg\: {0} deaktiviert.
-addConfirm={0} zu {1} hinzuf\u00b8gen?
-failedToAdd=Hinzuf\u00b8gung von {0} zu {1} fehlgeschlagen.
-successAdd={0} zu {1} hinzugef\u00b8gt.
+addConfirm={0} zu {1} hinzuf\u00fcgen?
+failedToAdd=Hinzuf\u00fcgung von {0} zu {1} fehlgeschlagen.
+successAdd={0} zu {1} hinzugef\u00fcgt.
 alreadyAssignedTo={0} ist {1} bereits zugeordnet.
-temporarilyUnavailable=Vor\u00b8bergehend nicht verf\u00b8gbar, bitte versuchen Sie es erneut.
+temporarilyUnavailable=Vor\u00fcbergehend nicht verf\u00fcgbar, bitte versuchen Sie es erneut.
 deleteTitle={0} entfernen
 deleteConfirm={0} wirklich entfernen?
 createTitle={0} erstellen
-added={0} hinzugef\u00b8gt
-addingFailed=Hinzuf\u00b8gung von {0} fehlgeschlagen
+added={0} hinzugef\u00fcgt
+addingFailed=Hinzuf\u00fcgung von {0} fehlgeschlagen
 deleted={0} entfernt.
 deletionFailed=Entfernung von {0} fehlgeschlagen
 saved={0} gespeichert
@@ -45,20 +45,20 @@ modify={0} bearbeiten
 modifyConfirm={0} wirklich bearbeiten?
 modified={0} bearbeitet 
 modificationFailed=Bearbeitung von {0} fehlgeschlagen
-serversRunningOnHost=Serververf\u00b8gbarkeit am Host\: {0}
-selectServerGroups=Servergruppen w\u2030hlen 
-selectServerGroupsFor=Servergruppen f\u00b8r {0}w\u2030hlen 
+serversRunningOnHost=Serververf\u00fcgbarkeit am Host\: {0}
+selectServerGroups=Servergruppen w\u00e4hlen 
+selectServerGroupsFor=Servergruppen f\u00fcr {0}w\u00e4hlen 
 alreadyAssignedToAllGroups={0} ist bereits allen Servergruppen zugeordnet.
-noServerGroupsSelected=Keine Servergruppen gew\u2030hlt. 
+noServerGroupsSelected=Keine Servergruppen gew\u00e4hlt. 
 unknown_error=Unbekannter Fehler
-available=Verf\u00b8gbar {0}
+available=Verf\u00fcgbar {0}
 successful=Erfolg\: {0}
 failed=Fehlgeschlagen\: {0}
 subsys_configadmin_remove=Konfiguration Admin Data entfernen
-subsys_configadmin_removeConfirm=Konfiguration Admin Daten f\u00b8r PID\: {0} entfernen?
+subsys_configadmin_removeConfirm=Konfiguration Admin Daten f\u00fcr PID\: {0} entfernen?
 subsys_naming_failedToLoadJNDIView=Laden der JNDI-Informationen fehlgeschlagen.
-subsys_osgi_frameworkPropertiesHelp=OSGi Framework Properties. \u0192nderungen an diesen Properties erfordern einen  Framework Neustart, um wirksam zu werden.
-subsys_osgi_capabilitiesHelp="Capabilities" sind JBoss Module oder OSGi-B\u00b8ndel, die geladen und optional beim Startup des OSGi-Untersystems gestartet werden. Ihre Startebene zeigt an, ob sie gestartet werden. 
+subsys_osgi_frameworkPropertiesHelp=OSGi Framework Properties. \u00c4nderungen an diesen Properties erfordern einen  Framework Neustart, um wirksam zu werden.
+subsys_osgi_capabilitiesHelp="Capabilities" sind JBoss Module oder OSGi-B\u00fcndel, die geladen und optional beim Startup des OSGi-Untersystems gestartet werden. Ihre Startebene zeigt an, ob sie gestartet werden. 
 subsys_osgi_removeCapability="Capability" entfernen
 subsys_osgi_removeCapabilityConfirm=Aus "Capabilities" entfernen\: {0}?
 subsys_osgi_cant_start_fragment=Kann kein Fragment ({0}) starten.
@@ -67,6 +67,6 @@ subsys_osgi_activate=Das OSGi-Untersystem ist nicht aktiv. Klicken Sie auf ''OK'
 subsys_osgi_activating=Aktiviere...
 subsys_messaging=Messaging-Provider\: {0}
 subsys_jca_err_ds_notEnabled=Datenquelle nicht aktiviert\: {0}
-server_config_stillRunning=Die Serverinstanz l\u2030uft noch\: {0}
+server_config_stillRunning=Die Serverinstanz l\u00e4uft noch\: {0}
 subsys_jpa_err_mericDisabled=Metrik an {0} nicht aktiviert
-server_reload_confirm=M\u02c6chten Sie die Serverkonfiguration f\u00b8r Server {0} neu laden?
+server_reload_confirm=M\u00f6chten Sie die Serverkonfiguration f\u00fcr Server {0} neu laden?
