--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_pt_BR.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_pt_BR.properties
@@ -1,23 +1,23 @@
-changeServerStatus=Voc\u00cd deseja {0} no sevidor {1}?
+changeServerStatus=Voc\u00ea deseja {0} no sevidor {1}?
 deleteServerConfig=Remove o Servidor Config
-deleteServerConfigConfirm="Voc\u00cd quer  remover a configura\u00c1\u201eo do servidor {0}?
-deploymentsFor=Implanta\u00c1\u0131es para {0}
+deleteServerConfigConfirm="Voc\u00ea quer  remover a configura\u00e7\u00e3o do servidor {0}?
+deploymentsFor=Implanta\u00e7\u00f5es para {0}
 common_validation_portOffsetUndefined={0} ou portOffset indefinido
-deleteServerGroupConfirm=Voc\u00cd deseja remover o  grupo de servidor {0}?
+deleteServerGroupConfirm=Voc\u00ea deseja remover o  grupo de servidor {0}?
 deleteServerGroup=Remove Server Group
-deleteJVM=Remover as Configura\u00c1\u0131es JVM
-deleteJVMConfirm=Voc\u00cd tem certeza de que quer remover os JM settings?
-common_validation_heapSize=Insira um valor de tamanho de heap v\u00b7lido no mb
+deleteJVM=Remover as Configura\u00e7\u00f5es JVM
+deleteJVMConfirm=Voc\u00ea tem certeza de que quer remover os JM settings?
+common_validation_heapSize=Insira um valor de tamanho de heap v\u00e1lido no mb
 removeProperty=Remover Propriedade
-removePropertyConfirm=Voc\u00cd realmente deseja remover a propriedade {0}?
-mustBeDeployableArchive={0} deve ser um nome de arquivo implant\u00b7vel.
-alreadyExists={0} j\u00b7 existe.
+removePropertyConfirm=Voc\u00ea realmente deseja remover a propriedade {0}?
+mustBeDeployableArchive={0} deve ser um nome de arquivo implant\u00e1vel.
+alreadyExists={0} j\u00e1 existe.
 common_validation_requiredField=Campo solicitado.
-common_validation_notEmptyNoSpace=Nenhum espa\u00c1o em branco ou em branco 
-commmon_description_newServerGroup=Crie um novo grupo do servidor baseado num grupo existente. O novo grupo ir\u00b7 herdar as propriedades do grupo selecionado.
-savedSettings=Sucesso\: Configura\u00c1\u0131es salvas
-restartRequired=Reinicializa\u00c1\u201eo solicitada
-restartRequiredConfirm=Altera\u00c1\u201eo das configura\u00c1\u0131es requer a reinicializa\u00c1\u201eo. Por favor, recarregue este aplicativo.
+common_validation_notEmptyNoSpace=Nenhum espa\u00e7o em branco ou em branco 
+commmon_description_newServerGroup=Crie um novo grupo do servidor baseado num grupo existente. O novo grupo ir\u00e1 herdar as propriedades do grupo selecionado.
+savedSettings=Sucesso\: Configura\u00e7\u00f5es salvas
+restartRequired=Reinicializa\u00e7\u00e3o solicitada
+restartRequiredConfirm=Altera\u00e7\u00e3o das configura\u00e7\u00f5es requer a reinicializa\u00e7\u00e3o. Por favor, recarregue este aplicativo.
 removeFromConfirm=Remove {0} a partir do {1}?
 failedToRemoveFrom=Falha ao remover {0} a partir do {1}.
 removedFrom=Removido do {0} a partir do {1}.
@@ -30,10 +30,10 @@ successDisabled=Sucesso\: desativado {0}.
 addConfirm=Adicionar {0} para {1}?
 failedToAdd=Falha ao adicionar {0} para {1}.
 successAdd=Adicionado {0} para {1}.
-alreadyAssignedTo={0} j\u00b7 \u00c8 determinado para  {1}.
-temporarilyUnavailable=Indispon\u00ccvel no momento, por favor tente novamente.
+alreadyAssignedTo={0} j\u00e1 \u00e9 determinado para  {1}.
+temporarilyUnavailable=Indispon\u00edvel no momento, por favor tente novamente.
 deleteTitle=Remover {0}
-deleteConfirm=Voc\u00cd tem certeza de quer remover {0}?
+deleteConfirm=Voc\u00ea tem certeza de quer remover {0}?
 createTitle=Cria {0}
 added=Adicionado {0}
 addingFailed=Falha ao adicionar {0}
@@ -42,31 +42,31 @@ deletionFailed=Falha ao remover {0}
 saved=Salvo {0}
 saveFailed=Falha ao salvar {0}
 modify=Modificar {0}
-modifyConfirm=Voc\u00cd realmente deseja modificar {0}?
+modifyConfirm=Voc\u00ea realmente deseja modificar {0}?
 modified=Modificado {0}
 modificationFailed=Falha ao modificar {0}
 serversRunningOnHost=Disponibilidade do servidor no host\: {0}
 selectServerGroups=Selecionar grupos do servidor
 selectServerGroupsFor=Selecionar grupos do servidor para {0}
-alreadyAssignedToAllGroups={0} j\u00b7 est\u00b7 determinado para todos os grupos do servidor.
+alreadyAssignedToAllGroups={0} j\u00e1 est\u00e1 determinado para todos os grupos do servidor.
 noServerGroupsSelected=Nenhum grupo do servidor selecionado.
 unknown_error=Erro desconhecido
 available=Disponibilidade {0}
 successful=Sucesso\: {0}
 failed=Falha\: {0}
-subsys_configadmin_remove=Remover os Dados Admin da Configura\u00c1\u201eo
-subsys_configadmin_removeConfirm=Remover os Dados Administrativos da Configura\u00c1\u201eo para PID\: {0}?
-subsys_naming_failedToLoadJNDIView=Falha ao carregar a informa\u00c1\u201eo JNDI.
-subsys_osgi_frameworkPropertiesHelp=Propriedades do Framework OSGi. As altera\u00c1\u0131es dessas propriedades requerem a reinicializa\u00c1\u201eo do Framework, com o objetivo delas tornar-sem dispon\u00ccveis.
-subsys_osgi_capabilitiesHelp=As capacidades s\u201eo M\u00dbdulos do JBoss. As altera\u00c1\u0131es que s\u201eo carregadas e opcionalmente inicializadas no sub-sistema OSGi. O n\u00ccvel de inicializa\u00c1\u201eo se e quando elas forem inicializadas.
+subsys_configadmin_remove=Remover os Dados Admin da Configura\u00e7\u00e3o
+subsys_configadmin_removeConfirm=Remover os Dados Administrativos da Configura\u00e7\u00e3o para PID\: {0}?
+subsys_naming_failedToLoadJNDIView=Falha ao carregar a informa\u00e7\u00e3o JNDI.
+subsys_osgi_frameworkPropertiesHelp=Propriedades do Framework OSGi. As altera\u00e7\u00f5es dessas propriedades requerem a reinicializa\u00e7\u00e3o do Framework, com o objetivo delas tornar-sem dispon\u00edveis.
+subsys_osgi_capabilitiesHelp=As capacidades s\u00e3o M\u00f3dulos do JBoss. As altera\u00e7\u00f5es que s\u00e3o carregadas e opcionalmente inicializadas no sub-sistema OSGi. O n\u00edvel de inicializa\u00e7\u00e3o se e quando elas forem inicializadas.
 subsys_osgi_removeCapability=Remover Cappacidade
 subsys_osgi_removeCapabilityConfirm=Remover das capacidades\: {0}?
-subsys_osgi_cant_start_fragment=N\u201eo posso inicializar um fragmento ({0}).
-subsys_osgi_cant_stop_fragment=N\u201eo posso interromper uma segmenta\u00c1\u201eo ({0}).
-subsys_osgi_activate=O Subsistema n\u201eo est\u00b7 ativo. Clque em ''OK'' pata ativ\u00b7lo.
+subsys_osgi_cant_start_fragment=N\u00e3o posso inicializar um fragmento ({0}).
+subsys_osgi_cant_stop_fragment=N\u00e3o posso interromper uma segmenta\u00e7\u00e3o ({0}).
+subsys_osgi_activate=O Subsistema n\u00e3o est\u00e1 ativo. Clque em ''OK'' pata ativ\u00e1lo.
 subsys_osgi_activating=Ativanfpad
 subsys_messaging=Provedor Message\: {0}
-subsys_jca_err_ds_notEnabled=A Fonte de Dados n\u201eo artivada.  {0}
-server_config_stillRunning=A inst\u201ancia do servidor ainda est\u00b7 rodando\: {0}
-subsys_jpa_err_mericDisabled=A m\u00c8trica n\u201eo \u00c8 ativada no {0}
-server_reload_confirm=Voc\u00cd deseja recarregar a configura\u00c1\u201eo do servidor para servidor.
+subsys_jca_err_ds_notEnabled=A Fonte de Dados n\u00e3o artivada.  {0}
+server_config_stillRunning=A inst\u00e2ncia do servidor ainda est\u00e1 rodando\: {0}
+subsys_jpa_err_mericDisabled=A m\u00e9trica n\u00e3o \u00e9 ativada no {0}
+server_reload_confirm=Voc\u00ea deseja recarregar a configura\u00e7\u00e3o do servidor para servidor.
