--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_es.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_es.properties
@@ -63,7 +63,7 @@ subsys_osgi_removeCapability=Borrar la funcionalidad
 subsys_osgi_removeCapabilityConfirm=\u00bfBorrar de las funcionalidades\: {0}?
 subsys_osgi_cant_start_fragment=No se puede inicar un fragmento ({0}).
 subsys_osgi_cant_stop_fragment=No se puede detener un fragmento ({0}).
-subsys_osgi_activate=El sub-sistema OSGi no est\u00e1 activo. Haga clic en ''OK'' para activarlo ahora.
+subsys_osgi_activate=El sub-sistema OSGi no est\u00e1 activo. Haga clic en &#39;&#39;OK&#39;&#39; para activarlo ahora.
 subsys_osgi_activating=Activando...
 subsys_messaging=Proveedor de mensajer\u00eda\: {0}
 subsys_jca_err_ds_notEnabled=Fuente de datos no habilitada\: {0}
