--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_pt_BR.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_pt_BR.properties
@@ -63,7 +63,7 @@ subsys_osgi_removeCapability=Remover Cappacidade
 subsys_osgi_removeCapabilityConfirm=Remover das capacidades\: {0}?
 subsys_osgi_cant_start_fragment=N\u00e3o posso inicializar um fragmento ({0}).
 subsys_osgi_cant_stop_fragment=N\u00e3o posso interromper uma segmenta\u00e7\u00e3o ({0}).
-subsys_osgi_activate=O Subsistema n\u00e3o est\u00e1 ativo. Clque em ''OK'' pata ativ\u00e1lo.
+subsys_osgi_activate=O Subsistema n\u00e3o est\u00e1 ativo. Clque em &#39;&#39;OK&#39;&#39; pata ativ\u00e1lo.
 subsys_osgi_activating=Ativanfpad
 subsys_messaging=Provedor Message\: {0}
 subsys_jca_err_ds_notEnabled=A Fonte de Dados n\u00e3o artivada.  {0}
