--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_de.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_de.properties
@@ -63,7 +63,7 @@ subsys_osgi_removeCapability="Capability" entfernen
 subsys_osgi_removeCapabilityConfirm=Aus "Capabilities" entfernen\: {0}?
 subsys_osgi_cant_start_fragment=Kann kein Fragment ({0}) starten.
 subsys_osgi_cant_stop_fragment=Kann kein Fragment ({0}) stoppen.
-subsys_osgi_activate=Das OSGi-Untersystem ist nicht aktiv. Klicken Sie auf ''OK'', um es jetzt zu aktivieren. 
+subsys_osgi_activate=Das OSGi-Untersystem ist nicht aktiv. Klicken Sie auf &#39;&#39;OK&#39;&#39;, um es jetzt zu aktivieren. 
 subsys_osgi_activating=Aktiviere...
 subsys_messaging=Messaging-Provider\: {0}
 subsys_jca_err_ds_notEnabled=Datenquelle nicht aktiviert\: {0}
