sort UIMessage.properties

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_ja.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_ja.properties
@@ -14,7 +14,8 @@ common_label_addItem=???????
 common_label_addProperty=????????
 common_label_addToGroup=???????
 common_label_addToGroups=???????
-common_label_advanced=??
+common_label_advanced=??Advanced
+common_label_append=Append
 common_label_areYouSure=????????
 common_label_attributes=??
 common_label_autoStart=?????
@@ -38,7 +39,8 @@ common_label_enabled=??
 common_label_finish=??
 common_label_item=????
 common_label_key=??
-common_label_lazyActivation=???????????
+common_label_lazyActivation=???????????Lazy Activation
+common_label_logout=Logout
 common_label_messageDetail=???????
 common_label_messageDetailTitle=?????
 common_label_messages=?????
@@ -84,7 +86,8 @@ interfaces_err_nic_set=Nic ???????????????????????
 interfaces_err_nicmatch_set=Nic ???????????????????????????
 interfaces_err_not_set=??????????????????????
 interfaces_err_wildcard_nor_address_set=Inet ???????????????????????????
-interfaces_err_wildcard_set=???????????????????????????????????
+interfaces_err_wildcard_set=??????????????????????????????????With Address Wildcard is set, no other values are possible.
+logout_confirm=Do you really want to logout?
 properties_global_desc=????????????????????????????Boot-Time ??????????? JVM start (-Dproperty=value) ??????????????
 server_config_desc=??????????????????????????????????????????????
 server_config_uptodate=???????????????
@@ -125,7 +128,8 @@ subsys_jca_ra_registered=??????????????
 subsys_jca_resource_adapter_desc=???????????
 subsys_jca_threadpool_config_desc=JCA ???????????????????????
 subsys_jca_workmanager_config_desc=???????????????????
-subsys_jca_xadataSources_desc=JDBC XA ????????
+subsys_jca_xadataSources_desc=JDBC XA ????????datasource configuration.
+subsys_jgroups_err_protocols_required=The protocol stack can not be empty!
 subsys_jmx_desc=JMX ?????????
 subsys_jpa_basicMetric_desc=???????????? Hibernate ????????
 subsys_jpa_deployment_desc=?????????????????????????????
@@ -142,7 +146,9 @@ subsys_logging_newHandlerProperty=?????????????
 subsys_logging_periodicRotatingFileHandlers_desc=?????????????????????????????????????????????????????????? java.text.SimpleDateFormat ??????????????
 subsys_logging_removeHandler=????????
 subsys_logging_rootLogger_desc=???????????????????????????
-subsys_logging_sizeRotatingFileHandlers_desc=??????????????????????????????????????????????????????????????????????????
+subsys_logging_sizeRotatingFileHandlers_desc=??????????????????????????????????????????????????????????????????????????Defines a handler which writes to a file, rotating the log after a the size of the file grows beyond a certain point and keeping a fixed number of backups.
+subsys_mail_server_desc=Mail server definitions to used with Mail Session.
+subsys_mail_session_desc=Mail session definitions.
 subsys_messaging_jms_desc=JMS ????
 subsys_messaging_jms_provider_desc=JMS ????????
 subsys_messaging_queue_metric_desc=JMS ?????????
