fix pt message properties

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_pt_BR.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_pt_BR.properties
@@ -48,7 +48,7 @@ savedSettings=Sucesso\: Configura\u00e7\u00f5es salvas
 selectServerGroups=Selecionar grupos do servidor
 selectServerGroupsFor=Selecionar grupos do servidor para {0}
 server_config_stillRunning=A inst\u00e2ncia do servidor ainda est\u00e1 rodando\: {0}
-server_reload_confirm=Voc\u00ea deseja recarregar a configura\u00e7\u00e3o do servidor para servidor.
+server_reload_confirm=Voc\u00ea deseja recarregar a configura\u00e7\u00e3o do servidor para servidor {0}
 serversRunningOnHost=Disponibilidade do servidor no host\: {0}
 subsys_configadmin_remove=Remover os Dados Admin da Configura\u00e7\u00e3o
 subsys_configadmin_removeConfirm=Remover os Dados Administrativos da Configura\u00e7\u00e3o para PID\: {0}?
