--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_ja.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_ja.properties
@@ -1,72 +1,72 @@
-addConfirm={1} ? {0} ????????
-added={0} ????????
-addingFailed={0} ????????????
-alreadyAssignedTo=???{0} ?{1} ????????????
-alreadyAssignedToAllGroups={0} ?????????????????????????
-alreadyExists={0} ??????????
-available=???? \: {0}
-changeServerStatus=server {1} ?{0} ?????
-commmon_description_newServerGroup=?????????????????????????????????????????????????????????????
-common_validation_heapSize=?????????? mb ????????????
-common_validation_notEmptyNoSpace=?????????????
-common_validation_portOffsetUndefined={0}????portOffset ???????????
-common_validation_requiredField=??
-createTitle={0} ???
-deleteConfirm={0} ?????????????????
-deleteJVM=JVM ?????
-deleteJVMConfirm=JVM ?????????????
-deleteServerConfig=?????????
-deleteServerConfigConfirm=??????{0}????????
-deleteServerGroup=???????????
-deleteServerGroupConfirm=????????{0}????????
-deleteTitle={0} ???
-deleted={0} ????????
-deletionFailed={0} ????????????
-deploymentsFor={0}????????
-disableConfirm={0} ?????????
-enableConfirm={0} ?????????
-failed=???{0}
-failedToAdd={1} ? {0} ????????????
-failedToDisable={0} ?????????????
-failedToEnable={0} ?????????????
-failedToRemoveFrom={1} ?? {0} ????????????
-modificationFailed={0} ????????????
-modified={0} ????????
-modify={0} ???
-modifyConfirm={0} ?????????????????
-mustBeDeployableArchive={0} ?????????????????????????????
-noServerGroupsSelected=???????????????????
-removeFromConfirm={1} ?? {0} ????????
-removeProperty=????????
-removePropertyConfirm=????? {0} ??????????????
-removedFrom={1} ?? {0} ????????
-restartRequired=?????????
-restartRequiredConfirm=????????????????????????????????????????
-saveFailed={0} ???????????
-saved={0} ????????
-savedSettings=???????
-selectServerGroups=???????????
-selectServerGroupsFor={0} ????????????????
-server_config_stillRunning=??????????????????\: {0}
-server_reload_confirm=????{0} ??????????????????
-serversRunningOnHost=????????????? \: {0}
-subsys_configadmin_remove=??????????
-subsys_configadmin_removeConfirm=PID\: {0} ????????????????
-subsys_jca_err_ds_notEnabled=????????????????? {0}
-subsys_jpa_err_mericDisabled={0} ?????????????????
-subsys_messaging=?????????????\: {0}
-subsys_naming_failedToLoadJNDIView=JNDI ???????????????
-subsys_osgi_activate=OSGi ?????????????????"OK" ?????????????????
-subsys_osgi_activating=????????...
-subsys_osgi_cant_start_fragment=??????({0})?????????
-subsys_osgi_cant_stop_fragment=??????({0})?????????
-subsys_osgi_capabilitiesHelp=????JBoss Modules ???? OSGi ?????????OSGi ??????????????????????
-subsys_osgi_frameworkPropertiesHelp=OSGi ?????????????????????????????????????????????????????
-subsys_osgi_removeCapability=?????
-subsys_osgi_removeCapabilityConfirm=???{0}????????
-successAdd={1} ? {0} ????????
-successDisabled=???{0} ??????????
-successEnabled=???{0} ??????????
-successful=???{0}
-temporarilyUnavailable=??????????????????????
-unknown_error=??????
+addConfirm={1} \u306B {0} \u3092\u8FFD\u52A0\u3057\u307E\u3059\u304B\uFF1F
+added={0} \u3092\u8FFD\u52A0\u3057\u307E\u3057\u305F\u3002
+addingFailed={0} \u3092\u8FFD\u52A0\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
+alreadyAssignedTo=\u3059\u3067\u306B{0} \u306F{1} \u306B\u5272\u308A\u5F53\u3066\u3089\u308C\u3066\u3044\u307E\u3059\u3002
+alreadyAssignedToAllGroups={0} \u306F\u3059\u3067\u306B\u5168\u30B5\u30FC\u30D0\u30FC\u30B0\u30EB\u30FC\u30D7\u306B\u5272\u308A\u5F53\u3066\u3089\u308C\u3066\u3044\u307E\u3059\u3002
+alreadyExists={0} \u306F\u3059\u3067\u306B\u5B58\u5728\u3057\u307E\u3059\u3002
+available=\u5229\u7528\u53EF\u80FD \: {0}
+changeServerStatus=server {1} \u3092{0} \u3057\u307E\u3059\u304B\uFF1F
+commmon_description_newServerGroup=\u65E2\u5B58\u306E\u30B5\u30FC\u30D0\u30FC\u30B0\u30EB\u30FC\u30D7\u3092\u3082\u3068\u306B\u65B0\u898F\u30B5\u30FC\u30D0\u30FC\u30B0\u30EB\u30FC\u30D7\u3092\u4F5C\u6210\u3057\u307E\u3059\u3002\u65B0\u898F\u30B0\u30EB\u30FC\u30D7\u306F\u3001\u9078\u629E\u3057\u305F\u30B0\u30EB\u30FC\u30D7\u306E\u30D7\u30ED\u30D1\u30C6\u30A3\u3092\u7D99\u627F\u3057\u307E\u3059\u3002
+common_validation_heapSize=\u6709\u52B9\u306A\u30D2\u30FC\u30D7\u30B5\u30A4\u30BA\u3092 mb \u5358\u4F4D\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+common_validation_notEmptyNoSpace=\u7A7A\u767D\u3001\u30DB\u30EF\u30A4\u30C8\u30B9\u30DA\u30FC\u30B9\u4E0D\u53EF
+common_validation_portOffsetUndefined={0}\u3042\u308B\u3044\u306FportOffset \u304C\u5B9A\u7FA9\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+common_validation_requiredField=\u5FC5\u9808
+createTitle={0} \u306E\u4F5C\u6210
+deleteConfirm={0} \u3092\u672C\u5F53\u306B\u524A\u9664\u3057\u3066\u3082\u3088\u308D\u3057\u3044\u3067\u3059\u304B\uFF1F
+deleteJVM=JVM \u8A2D\u5B9A\u306E\u524A\u9664
+deleteJVMConfirm=JVM \u8A2D\u5B9A\u3092\u672C\u5F53\u306B\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F
+deleteServerConfig=\u30B5\u30FC\u30D0\u30FC\u8A2D\u5B9A\u306E\u524A\u9664
+deleteServerConfigConfirm=\u30B5\u30FC\u30D0\u30FC\u8A2D\u5B9A{0}\u3092\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F
+deleteServerGroup=\u30B5\u30FC\u30D0\u30FC\u30B0\u30EB\u30FC\u30D7\u306E\u524A\u9664
+deleteServerGroupConfirm=\u30B5\u30FC\u30D0\u30FC\u30B0\u30EB\u30FC\u30D7{0}\u3092\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F
+deleteTitle={0} \u306E\u524A\u9664
+deleted={0} \u3092\u524A\u9664\u3057\u307E\u3057\u305F\u3002
+deletionFailed={0} \u3092\u524A\u9664\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
+deploymentsFor={0}\u306E\u30C7\u30D7\u30ED\u30A4\u30E1\u30F3\u30C8
+disableConfirm={0} \u3092\u7121\u52B9\u306B\u3057\u307E\u3059\u304B\uFF1F
+enableConfirm={0} \u3092\u6709\u52B9\u306B\u3057\u307E\u3059\u304B\uFF1F
+failed=\u5931\u6557\uFF1A{0}
+failedToAdd={1} \u306B {0} \u3092\u8FFD\u52A0\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
+failedToDisable={0} \u3092\u7121\u52B9\u306B\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
+failedToEnable={0} \u3092\u6709\u52B9\u306B\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
+failedToRemoveFrom={1} \u304B\u3089 {0} \u3092\u524A\u9664\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
+modificationFailed={0} \u3092\u5909\u66F4\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
+modified={0} \u3092\u5909\u66F4\u3057\u307E\u3057\u305F\u3002
+modify={0} \u306E\u5909\u66F4
+modifyConfirm={0} \u3092\u672C\u5F53\u306B\u5909\u66F4\u3057\u3066\u3082\u3088\u308D\u3057\u3044\u3067\u3059\u304B\uFF1F
+mustBeDeployableArchive={0} \u306F\u30C7\u30D7\u30ED\u30A4\u53EF\u80FD\u306A\u30A2\u30FC\u30AB\u30A4\u30D6\u30D5\u30A1\u30A4\u30EB\u540D\u3067\u306A\u3051\u308C\u3070\u306A\u308A\u307E\u305B\u3093\u3002
+noServerGroupsSelected=\u30B5\u30FC\u30D0\u30FC\u30B0\u30EB\u30FC\u30D7\u304C\u9078\u629E\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+removeFromConfirm={1} \u304B\u3089 {0} \u3092\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F
+removeProperty=\u30D7\u30ED\u30D1\u30C6\u30A3\u306E\u524A\u9664
+removePropertyConfirm=\u30D7\u30ED\u30D1\u30C6\u30A3 {0} \u3092\u524A\u9664\u3057\u3066\u3082\u3088\u308D\u3057\u3044\u3067\u3059\u304B\uFF1F
+removedFrom={1} \u304B\u3089 {0} \u3092\u524A\u9664\u3057\u307E\u3057\u305F\u3002
+restartRequired=\u518D\u8D77\u52D5\u304C\u5FC5\u8981\u3067\u3059\u3002
+restartRequiredConfirm=\u8A2D\u5B9A\u3092\u5909\u66F4\u3059\u308B\u306B\u306F\u518D\u8D77\u52D5\u304C\u5FC5\u8981\u3067\u3059\u3002\u3053\u306E\u30A2\u30D7\u30EA\u30B1\u30FC\u30B7\u30E7\u30F3\u3092\u30EA\u30ED\u30FC\u30C9\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+saveFailed={0} \u306E\u4FDD\u5B58\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002
+saved={0} \u3092\u4FDD\u5B58\u3057\u307E\u3057\u305F\u3002
+savedSettings=\u6210\u529F\uFF1A\u8A2D\u5B9A\u4FDD\u5B58
+selectServerGroups=\u30B5\u30FC\u30D0\u30FC\u30B0\u30EB\u30FC\u30D7\u306E\u9078\u629E
+selectServerGroupsFor={0} \u306B\u30B5\u30FC\u30D0\u30FC\u30B0\u30EB\u30FC\u30D7\u3092\u9078\u629E\u3057\u307E\u3059\u3002
+server_config_stillRunning=\u30B5\u30FC\u30D0\u30FC\u30A4\u30F3\u30B9\u30BF\u30F3\u30B9\u304C\u7A3C\u52D5\u3057\u3066\u3044\u307E\u3059\: {0}
+server_reload_confirm=\u30B5\u30FC\u30D0\u30FC{0} \u306E\u30B5\u30FC\u30D0\u30FC\u8A2D\u5B9A\u3092\u518D\u8AAD\u307F\u8FBC\u307F\u3057\u307E\u3059\u304B\uFF1F
+serversRunningOnHost=\u30DB\u30B9\u30C8\u3067\u306E\u30B5\u30FC\u30D0\u30FC\u5229\u7528\u72B6\u6CC1 \: {0}
+subsys_configadmin_remove=\u8A2D\u5B9A\u7BA1\u7406\u30C7\u30FC\u30BF\u306E\u524A\u9664
+subsys_configadmin_removeConfirm=PID\: {0} \u306E\u8A2D\u5B9A\u7BA1\u7406\u30C7\u30FC\u30BF\u3092\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F
+subsys_jca_err_ds_notEnabled=\u30C7\u30FC\u30BF\u30BD\u30FC\u30B9\u306F\u6709\u52B9\u3067\u306F\u3042\u308A\u307E\u305B\u3093\uFF1A {0}
+subsys_jpa_err_mericDisabled={0} \u3067\u30E1\u30C8\u30EA\u30C3\u30AF\u304C\u6709\u52B9\u3067\u306F\u3042\u308A\u307E\u305B\u3093\u3002
+subsys_messaging=\u30E1\u30C3\u30BB\u30FC\u30B8\u30F3\u30B0\u30D7\u30ED\u30D0\u30A4\u30C0\u30FC\: {0}
+subsys_naming_failedToLoadJNDIView=JNDI \u60C5\u5831\u306E\u8AAD\u307F\u8FBC\u307F\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002
+subsys_osgi_activate=OSGi \u30B5\u30D6\u30B7\u30B9\u30C6\u30E0\u306F\u6709\u52B9\u3067\u306F\u3042\u308A\u307E\u305B\u3093\u3002"OK" \u3092\u30AF\u30EA\u30C3\u30AF\u3057\u3066\u4ECA\u3059\u3050\u6709\u52B9\u306B\u3057\u307E\u3059\u3002
+subsys_osgi_activating=\u6709\u52B9\u5316\u3057\u3066\u3044\u307E\u3059...
+subsys_osgi_cant_start_fragment=\u30D5\u30E9\u30B0\u30E1\u30F3\u30C8({0})\u3092\u958B\u59CB\u3067\u304D\u307E\u305B\u3093\u3002
+subsys_osgi_cant_stop_fragment=\u30D5\u30E9\u30B0\u30E1\u30F3\u30C8({0})\u3092\u505C\u6B62\u3067\u304D\u307E\u305B\u3093\u3002
+subsys_osgi_capabilitiesHelp=\u6A5F\u80FD\u3068\u306FJBoss Modules \u3042\u308B\u3044\u306F OSGi \u30D0\u30F3\u30C9\u30EB\u306E\u3053\u3068\u3067\u3001OSGi \u30B5\u30D6\u30B7\u30B9\u30C6\u30E0\u306E\u8D77\u52D5\u6642\u306B\u30ED\u30FC\u30C9\u3057\u3001\u30AA\u30D7\u30B7\u30E7\u30F3\u3067
+subsys_osgi_frameworkPropertiesHelp=OSGi \u30D5\u30EC\u30FC\u30E0\u30EF\u30FC\u30AF\u30D7\u30ED\u30D1\u30C6\u30A3\u3002\u3053\u306E\u30D7\u30ED\u30D1\u30C6\u30A3\u3092\u5909\u66F4\u3057\u6709\u52B9\u306B\u3059\u308B\u306B\u306F\u3001\u30D5\u30EC\u30FC\u30E0\u30EF\u30FC\u30AF\u3092\u518D\u8D77\u52D5\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
+subsys_osgi_removeCapability=\u6A5F\u80FD\u306E\u524A\u9664
+subsys_osgi_removeCapabilityConfirm=\u6A5F\u80FD\uFF1A{0}\u3092\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F
+successAdd={1} \u306B {0} \u3092\u8FFD\u52A0\u3057\u307E\u3057\u305F\u3002
+successDisabled=\u6210\u529F\uFF1A{0} \u304C\u7121\u52B9\u306B\u306A\u308A\u307E\u3057\u305F\u3002
+successEnabled=\u6210\u529F\uFF1A{0} \u304C\u6709\u52B9\u306B\u306A\u308A\u307E\u3057\u305F\u3002
+successful=\u6210\u529F\uFF1A{0}
+temporarilyUnavailable=\u4E00\u6642\u7684\u306B\u5229\u7528\u3067\u304D\u307E\u305B\u3093\u3002\u518D\u8A66\u884C\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+unknown_error=\u4E0D\u660E\u306A\u30A8\u30E9\u30FC
