interim commit: make full build work again (restrict locale to 'en')

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
@@ -39,7 +39,7 @@ common_label_enabled=Aktiviert
 common_label_finish=Beenden
 common_label_item=Posten
 common_label_key=Schl\u00fcssel
-common_label_lazyActivation="Lazy" Aktivierung Activation
+common_label_lazyActivation=Lazy Aktivierung
 common_label_logout=Abmelden
 common_label_messageDetail=Nachrichteninfos
 common_label_messageDetailTitle=Nachricht
