--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_es.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_es.properties
@@ -39,7 +39,7 @@ common_label_enabled=Habilitado
 common_label_finish=Terminar
 common_label_item=objeto
 common_label_key=Llave
-common_label_lazyActivation=Activaci\u00f3n perezosaLazy Activation
+common_label_lazyActivation=Activaci\u00f3n perezosa
 common_label_logout=Logout
 common_label_messageDetail=Detalles del mensaje
 common_label_messageDetailTitle=Mensaje
