--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_pt_BR.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_pt_BR.properties
@@ -39,7 +39,7 @@ common_label_enabled=Ativado
 common_label_finish=Finalizar
 common_label_item=item
 common_label_key=Chave
-common_label_lazyActivation=Ativa\u00e7\u00e3o LentaLazy Activation
+common_label_lazyActivation=Ativa\u00e7\u00e3o Lenta
 common_label_logout=Logout
 common_label_messageDetail=Detalhe da Mensagem
 common_label_messageDetailTitle=Mensagem
